<resources>
    <string name="app_name">Music_player</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="favourites_button">Favourites</string>
    <string name="playlist_button">Playlists</string>
    <string name="total_songs">Total songs</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="equlizer_btn">Equlizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="repeat">Repeat</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to, \nthe world of music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song album</string>
</resources>